<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>

    <string name="glide">https://github.com/bumptech/glide</string>
    <string name="retrofit">https://github.com/square/retrofit</string>
    <string name="udacity">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
</resources>
